--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.12.0",
     "ng-otp-input": "^1.9.3",
@@ -82,6 +83,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.9",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.9.0",
